# prompt-diff

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/prompt_diff/: __init__.py  __main__.py  core.py
src/prompt_diff.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_diff.py
